<resources>
    <string name="app_name">Trivia</string>
    <string name="out_of_text">Question 45/90</string>
    <string name="Button_true">True</string>
    <string name="Button_False">False</string>
    <string name="Button_Next">Next</string>
    <string name="question">QUESTION TO BE DISPLAYED</string>
    <string name="max_score">Max Score:</string>
    <string name="current_score_text">Current Score:</string>
</resources>